...
                        android:layout_height="wrap_content"
                        android:hint="@string/label_owner_name"
                        app:startIconDrawable="@drawable/ic_person"
                        style="@style/Widget.RudaSurvey.TextInput"
                        android:layout_marginBottom="@dimen/field_spacing">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etOwnerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilFatherName"
...
            app:icon="@drawable/ic_save"
            app:iconGravity="textStart"
            style="@style/Widget.RudaSurvey.Button.Secondary"
            android:layout_marginEnd="@dimen/spacing_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReviewChanges"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_large"
            android:layout_weight="1"
            android:text="View Changes"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_body"
...
